# be-poem-rust

./: .gitignore  Cargo.toml  Dockerfile  cmd-compilation-deployment.bat  docker-compose.yml  start.sh  stop.sh
database/postgresql/: func_generate_id.sql  tbl_diag.sql  tbl_example_template.sql  tbl_ext_api.sql  tbl_ext_api_req.sql  tbl_ext_api_var.sql  tbl_ext_database.sql  tbl_ext_database_query.sql  tbl_ext_server.sql  tbl_ext_server_shortcut.sql  tbl_mt_attend.sql  tbl_mt_branch.sql  tbl_mt_database_type.sql  tbl_mt_http_method.sql  tbl_mt_json.sql  tbl_mt_json_role.sql  tbl_mt_lang.sql  tbl_mt_lang_key.sql  tbl_mt_lang_type.sql  tbl_mt_lang_value.sql  tbl_mt_menu.sql  tbl_mt_menu_role.sql  tbl_mt_role.sql  tbl_mt_role_menu.sql  tbl_mt_server_type.sql  tbl_query_manual.sql  tbl_user.sql  tbl_user_branch.sql  tbl_user_role.sql
doc/: doc.txt
src/: auth.rs  database_pool.rs  db.rs  facades.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/auth/: jwt.rs  middleware.rs  model.rs
src/facades/: external.rs  main.rs  master.rs  test.rs
src/facades/command/: language.rs  role.rs
src/facades/test/: example_template.rs
src/language/: en.json  id.json
src/models/: command.rs  common.rs  example_template.rs  external.rs  login.rs  master.rs  master_menu.rs  user.rs  user_role.rs
src/models/command/: language.rs  role.rs
src/models/master/: database_type.rs
src/routes/: command.rs  credential.rs  external.rs  main.rs  master.rs  test.rs
src/utils/: auth.rs  common.rs  database.rs  pg.rs
