[package]
name = "be-poem-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1.11", features = ["websocket"] }
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rand = "0.8"
jsonwebtoken = "9"
async-trait = "0.1"
once_cell = "1.19"
futures = "0.3"
validator = "0.18"
validator_derive = "0.18"
tokio-postgres = "0.7.13"
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }
log = "0.4"
regex = "1"
umya-spreadsheet = "1.1"