[package]
name = "be-poem-rust"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
poem = { version = "3.1.11", features = ["websocket", "multipart"] }
#poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["mysql", "postgres", "macros", "runtime-tokio-native-tls", "bigdecimal"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rand = "0.8"
jsonwebtoken = "9"
validator = "0.18"
validator_derive = "0.18"
tokio-postgres = "0.7.13"
rust_decimal = { version = "1.36", features = ["db-tokio-postgres", "serde" ] }
log = "0.4"
regex = "1"
umya-spreadsheet = "1.1"
ssh2 = "0.9"
tempfile = "3"
base64 = "0.21"